# model-evaluation

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
src/schema/: schemas.py
