[project]
name = "model-evaluation"
version = "0.1.0"
description = ""
authors = [
    {name = "Josh de la Paz",email = "dlpjoshua@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "deepeval (>=3.7.2,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "procrastinate (>=3.5.3,<4.0.0)",
    "langchain-openai (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
